fix mainimage css

--- a/Swallab/headpage/headpage.html
+++ b/Swallab/headpage/headpage.html
@@ -287,8 +287,7 @@
                 <div class="col-5 d-flex flex-column justify-content-center mt-3" style="overflow: hidden;">
                     <div id="mainImageRest">
                         <button href="" class="">
-                            <img src="../images/headpage_mainphoto/main_rest.jpeg" alt=""
-                                style="position: relative; left: 0%;">
+                            <img src="../images/headpage_mainphoto/main_rest.jpeg" alt="">
                         </button>
                     </div>
                     <div class="row justify-content-center" id="btnRest">
@@ -298,8 +297,7 @@
                 <div class="col-5 d-flex flex-column justify-content-center mt-3" style="overflow: hidden;">
                     <div id="mainImageNotes">
                         <button href="#" class="">
-                            <img src="../images/headpage_mainphoto/main_notes.jpeg" alt=""
-                                style="position: relative; left: -60%;">
+                            <img src="../images/headpage_mainphoto/main_notes.jpeg" alt="">
                         </button>
                     </div>
                     <div class="row justify-content-center" id="btnNotes">
