--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -74,7 +74,7 @@
 
                 <!-- 新增菜單 module -->
 
-                <div class="addOptionContainerBg d-none" id="newForm">
+                <div class="addOptionContainerBg d-none" id="newForm" style="z-index: 2000 !important;">
                     <!-- <div class="addOptionContainerBg" id="newForm"> -->
 
                     <!-- <form action="" method="post" enctype="multipart/form-data" id="editForm"> -->
@@ -126,7 +126,7 @@
 
                 </div>
                 <!-- 編輯/修改菜單 -->
-                <div class="addOptionContainerBg d-none" id="modifyFormCon">
+                <div class="addOptionContainerBg d-none" id="modifyFormCon" style="z-index: 2000 !important;">
                     <!-- <div class="addOptionContainerBg" id="newForm"> -->
 
                     <!-- <form action="" method="post" enctype="multipart/form-data" id="editForm"> -->
@@ -164,7 +164,7 @@
 
                 </div>
                 <!-- 刪除菜單 -->
-                <div class="addOptionContainerBg d-none" id="deleteFormCon">
+                <div class="addOptionContainerBg d-none" id="deleteFormCon" style="z-index: 2000 !important;">
                 <!-- <div class="addOptionContainerBg" id="deleteFormCon"> -->
                     
                     <form id="deleteForm" enctype="multipart/form-data">
