--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- NAV_begin : sticky-top -->
     <nav class="navbar navbar-expand sticky-top shadow">
         <div class="container">
             <!-- LOGO -->
@@ -121,14 +122,16 @@
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
-                <div class="ms-3 me-5 col-1">
-                    <a href="#" class="">
+                <div class="ms-3 me-5 col-1" style="color:blue">
+                    <!-- <a href="#" class="">
                         <button class="btn btn-sm btnLogin text-nowrap">登入/註冊</button>
-                    </a>
+                    </a> -->
+                    David
                 </div>
             </div>
         </div>
     </nav>
+    <!-- NAV_end -->
 
 
     
@@ -335,37 +338,44 @@
     <!-- TOP按鈕 -->
     <img src="../images/other/top.png" alt="" class="top" id="top"/>
 
-    <footer class="container-fluid mt-3">
-    <!-- 左右二欄 -->
-    <div class="row justify-content-center mt-3">
-        <!-- 左邊logo -->
-        <div class="col-4">
-            <img src="../_images/root/LOGO.jpg" class="logo" alt="">
-        </div>
-        <!-- 右邊三列 -->
-        <div class="col-4">
-            <div class="row">
-                <button class="btn btn-outline-success">找餐廳</button>
+    <footer class="myFooter mt-3">
+        <!-- 左右二欄 -->
+        <div class="row justify-content-center mt-3 container">
+            <!-- 左邊logo -->
+            <div class="col-4 text-center"></div>
+            <div class="col-2 justify-content-center">
+                <img src="../images/root/logo.jpg" class="logo" alt="">
+                <div class="text-center">
+                    <span class="rights text-nowrap">© 版權聲明</span>
+                </div>
             </div>
-            <div class="row">
-                <button class="btn btn-outline-success">看食記</button>
+            <!-- 右邊三列 -->
+            <div class="col-2">
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">找餐廳</a>
+                </div>
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">看食記</a>
+                </div>
+                <div class="row justify-content-center">
+                    <!-- 二個 icon -->
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-facebook"></i>  <!-- facebook -->
+                    </a>
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-instagram"></i> <!-- instagram -->
+                    </a>
+                </div>
             </div>
-            <div class="row justify-content-center text-center">
-                <!-- 二個 icon -->
-                <a href="#" class="col-6">FBICON<img src="" alt=""></a>
-                <a href="#" class="col-6">IGICON<img src="" alt=""></a>
-            </div>
+            <div class="col-4 text-center"></div>
         </div>
-        <div class="row justify-content-center text-center">
-            <span>© 版權聲明</span>
-        </div>
-    </div>
     </footer>
+
 
     <script src="../js/bootstrap.bundle.js"></script>
     <script src="../js/jquery-3.7.1.js"></script>
     <script src="../js/demoHotpot.js"></script>
     <script src="../js/footer.js"></script>
-    <!-- <script src="../js/nav.js"></script> -->
+    <!-- <script src="../js/nav.js"></script>     -->
 </body>
 </html>
