--- a/Swallab/foodNotes/foodNotes.html
+++ b/Swallab/foodNotes/foodNotes.html
@@ -123,10 +123,11 @@
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
-                <div class="ms-3 me-5 col-1">
-                    <a href="#" class="">
+                <div class="ms-3 me-5 col-1" style="color:blue">
+                    <!-- <a href="#" class="">
                         <button class="btn btn-sm btnLogin text-nowrap">登入/註冊</button>
-                    </a>
+                    </a> -->
+                    David
                 </div>
             </div>
         </div>
@@ -242,38 +243,45 @@
     <!-- TOP按鈕 -->
     <img src="../images/other/top.png" alt="" class="top" id="top"/>
 
-    <footer class="container-fluid mt-3">
-    <!-- 左右二欄 -->
-    <div class="row justify-content-center mt-3">
-        <!-- 左邊logo -->
-        <div class="col-4">
-            <img src="../_images/root/LOGO.jpg" class="logo" alt="">
-        </div>
-        <!-- 右邊三列 -->
-        <div class="col-4">
-            <div class="row">
-                <button class="btn btn-outline-success">找餐廳</button>
+    <!-- Footer_begin -->
+    <footer class="myFooter mt-3">
+        <!-- 左右二欄 -->
+        <div class="row justify-content-center mt-3 container">
+            <!-- 左邊logo -->
+            <div class="col-4 text-center"></div>
+            <div class="col-2 justify-content-center">
+                <img src="../images/root/logo.jpg" class="logo" alt="">
+                <div class="text-center">
+                    <span class="rights text-nowrap">© 版權聲明</span>
+                </div>
             </div>
-            <div class="row">
-                <button class="btn btn-outline-success">看食記</button>
+            <!-- 右邊三列 -->
+            <div class="col-2">
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">找餐廳</a>
+                </div>
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">看食記</a>
+                </div>
+                <div class="row justify-content-center">
+                    <!-- 二個 icon -->
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-facebook"></i>  <!-- facebook -->
+                    </a>
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-instagram"></i> <!-- instagram -->
+                    </a>
+                </div>
             </div>
-            <div class="row justify-content-center text-center">
-                <!-- 二個 icon -->
-                <a href="#" class="col-6">FBICON<img src="" alt=""></a>
-                <a href="#" class="col-6">IGICON<img src="" alt=""></a>
-            </div>
+            <div class="col-4 text-center"></div>
         </div>
-        <div class="row justify-content-center text-center">
-            <span>© 版權聲明</span>
-        </div>
-    </div>
     </footer>
 
     <script src="../js/bootstrap.bundle.js"></script>
     <script src="../js/jquery-3.7.1.js"></script>
     <script src="../js/foodNoted.js"></script>
     <script src="../js/footer.js"></script>
-    <script src="../js/nav.js"></script>
+    <!-- <script src="../js/nav.js"></script> -->
 </body>
 </html>
 
