--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -90,12 +90,7 @@
                             </div>
                             <div class="col row">
 
-                                <div class="col-12">
-                                    <h5>
-                                        <label for="foodPrice">價&emsp;&emsp;格 : &emsp;&emsp;</label>
-                                    </h5>
-                                    <input type="number" name="foodPrice" id="foodPrice">
-                                </div>
+                                
                                 <div class="col-12">
                                     <h5>
                                         <label for="foodName">名&emsp;&emsp;稱 : &emsp;&emsp;</label>
@@ -104,10 +99,16 @@
                                 </div>
                                 <div class="col-12">
                                     <h5>
+                                        <label for="foodPrice">價&emsp;&emsp;格 : &emsp;&emsp;</label>
+                                    </h5>
+                                    <input type="number" name="foodPrice" id="foodPrice">
+                                </div>
+                                <div class="col-12">
+                                    <h5>
                                         <label for="classification">餐點分類 : &emsp;&emsp;</label>
                                     </h5>
                                     <select name="classification" id="classification">
-                                        <option value="" disabled selected>請選擇...(動態)</option>
+                                        <option value="" disabled selected>請選擇...</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
