新增留言編輯刪除按鈕-未完成

--- a/Swallab/foodNotes/demoDavid.html
+++ b/Swallab/foodNotes/demoDavid.html
@@ -3,19 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>小熊維尼</title>
+    <title>David</title>
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/author.css" />
     <link href="../css/root.css" rel="stylesheet" />
     <link href="../css/nav.css" rel="stylesheet" />
     <link href="../css/footer.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous"referrerpolicy="no-referrer"/>
   </head>
   <body>
     <nav class="navbar navbar-expand sticky-top shadow">
@@ -140,7 +134,7 @@
     <div class="container p-0">
       <div class="row d-flex justify-content-center p-0 mt-5 mb-2">
         <!-- 個人資訊 -->
-        <img src="../images/other/winnie.webp"class="img-fluid col-4 p-0 headphoto"/>
+        <img src="../images/other/小豬皮傑.jpg"class="img-fluid col-4 p-0 headphoto"/>
         <div class="col-8 p-3">
           <div class="d-flex justify-content-center align-items-center p-3">
             <div class="d-flex" style="gap: 150px">
@@ -148,7 +142,7 @@
               <div>
                 <div class="d-flex justify-content-center align-items-center">
                   <h3 class="authorName" style="margin-bottom: 40px">
-                    小熊維尼
+                    David
                   </h3>
                 </div>
                 <div class="social-icon">
@@ -161,8 +155,8 @@
               <div>
                 <div class="d-flex justify-content-center align-items-center">
                   <h4 class="followTitle">
-                    <strong>30</strong> 追蹤中
-                    <strong id="fans">100</strong> 粉絲
+                    <strong>250</strong> 追蹤中
+                    <strong id="fans">85</strong> 粉絲
                   </h4>
                 </div>
                 <div class="d-flex justify-content-center align-items-center">
