--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -274,7 +274,7 @@
 
             <div id="messages-container">
 
-                <div class="d-flex justify-content-center mt-4 m-0">
+                <!-- <div class="d-flex justify-content-center mt-4 m-0">
                     <div class="row d-flex justify-content-center m-2 p-2 commentHeadphoto" >
                         <div class="col-4 d-flex flex-column align-items-center justify-content-center p-3" >
                             <img src="../images/other/小豬皮傑.jpg" alt=""/>
@@ -288,10 +288,10 @@
                             <p >2024-07-20</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <hr style="border: 2px solid black;"/> -->
 
-                <div class="d-flex justify-content-center mt-4 m-0">
+                <!-- <div class="d-flex justify-content-center mt-4 m-0">
                     <div class="row d-flex justify-content-center m-2 p-2 commentHeadphoto" >
                         <div class="col-4 d-flex flex-column align-items-center justify-content-center p-3" >
                             <img src="../images/other/屹耳.webp" alt=""/>
@@ -305,10 +305,10 @@
                             <p >2024-06-30</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <hr style="border: 2px solid black;"/> -->
 
-                <div class="d-flex justify-content-center mt-4 m-0">
+                <!-- <div class="d-flex justify-content-center mt-4 m-0">
                     <div class="row d-flex justify-content-center m-2 p-2 commentHeadphoto" >
                         <div class="col-4 d-flex flex-column align-items-center justify-content-center p-3" >
                             <img src="../images/other/跳跳虎.jpg" alt=""/>
@@ -322,7 +322,7 @@
                             <p >2024-05-20</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             
 
