--- a/Swallab/foodNotes/demoPiggy.html
+++ b/Swallab/foodNotes/demoPiggy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>David</title>
+    <title>小豬皮傑</title>
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/author.css" />
     <link href="../css/root.css" rel="stylesheet" />
@@ -142,7 +142,7 @@
               <div>
                 <div class="d-flex justify-content-center align-items-center">
                   <h3 class="authorName" style="margin-bottom: 40px">
-                    David
+                    小豬皮傑
                   </h3>
                 </div>
                 <div class="social-icon">
@@ -170,10 +170,7 @@
           <div class="w-100 p-4">
             <h5>個人簡介：</h5>
             <div class="mt-2 p-2 information">
-              嗨，大家好！我是小熊維尼，一名熱愛探尋各地美食的部落客。無論是大排長龍的網紅餐廳，還是街頭巷尾的隱藏美味，我都充滿好奇與熱情。
-              我從小就對食物有著濃厚的興趣，喜歡嘗試不同的口味和料理方式。這份熱情讓我開始了美食部落格之旅，希望能夠通過文字和照片，將我所品嚐到的每一份美味分享給大家。
-              在這裡，你不僅會找到餐廳的詳細評價和美食推薦，還能了解每道菜餚背後的故事和文化。我相信，食物是連接人與人之間最美好的橋梁。
-              希望我的分享能夠帶給你更多美食靈感，讓我們一起在這條美食之路上，發現更多的驚喜和感動。感謝你的支持和關注！
+              嗨，歡迎來到我的Blog！我是小豬皮傑，一個熱愛探索美食的餐廳迷。從街頭小吃到米其林餐廳，我都樂於品嚐和分享。這裡記錄了我的美食旅程，真實的餐廳體驗，以及我對美食的獨特見解。希望我的分享能為您帶來味蕾上的新發現！
             </div>
           </div>
         </div>
@@ -182,19 +179,16 @@
         <div class="mt-5 mb-5 p-0">
           <div class="d-flex justify-content-center mt-4 m-0">
             <div class="row d-flex justify-content-center m-2 p-0 foodNotes-bg">
-              <img src="../images/hotpot/qinghj.jpg" alt="" class="col-5 m-4" />
+              <img src="../images/dessert/overture.jpg" alt="" class="col-5 m-4" />
               <div class="col-7 d-flex align-items-center">
                 <div class="p-4">
-                  <h4 class="mb-4">青花驕</h4>
-                  <a href="./demoHotpot.html" style="text-decoration: none;">
+                  <h4 class="mb-4">Overture序曲</h4>
+                  <a href="#" style="text-decoration: none;">
                         <div class="ellipsis-6 history">
-                            青花驕麻辣鍋是王品集團推出的麻辣鍋品牌餐廳，麻辣湯頭加入重慶的九葉青花椒熬煮，鮮麻香醇，非常吸引我。想不到幫同事的慶生聚餐，壽星就選定青花驕麻辣鍋崇德店，當餐廳人選丟出來的時候，我完全是舉雙手雙腳同意的啊🙋‍♀️預訂好日期後，大家一起騎車前往青花驕麻辣鍋報到！<br />
-                            【青花驕麻辣鍋 台中崇德店】<br />
-                            📞電話：04-2422-3286 <br />
-                            🏡地址：台中市北屯區崇德路三段189號 <br />
-                            💰鍋底費130元/人；鴛鴦鍋每桌+收150元；青麻椒肥牛鍋每桌+收298元；每人低消300元(需加收10%服務費)
-                            <br />
-                            👶120cm以下兒童不收費
+                          【台中甜點推薦】Overture序曲 千層蛋糕水果蛋糕IG網美人氣名店！<br>
+                          《Overture序曲》是台中老字號甜點蛋糕名店，我還沒開始寫部落格時就很有名<br>
+                          菜單上蛋糕品項非常多，招牌為千層蛋糕、水果蛋糕，戚風蛋糕、水果塔、布丁等的評價也蠻好的<br>
+                          《Overture序曲》目前在大台中地區有三家分店，菜單蛋糕種類不太一樣，各分店間可以外帶至另一家店內用的唷
                         </div>
                   </a>
                   
@@ -205,19 +199,20 @@
 
           <div class="d-flex justify-content-center mt-4 m-0">
             <div class="row d-flex justify-content-center m-2 p-0 foodNotes-bg">
-              <img src="../images/hotpot/roudd.png" alt="" class="col-5 m-4" />
+              <img src="../images/izakaya/zhitxc.jpg" alt="" class="col-5 m-4" />
               <div class="col-7 d-flex align-items-center">
                 <div class="p-4">
-                  <h4 class="mb-4">肉多多</h4>
+                  <h4 class="mb-4">織田信長串燒</h4>
                   <div class="ellipsis-6 history">
-                    最近天氣終於變冷，最適合吃個暖暖的火鍋。說到火鍋，一定會想到已經開了近50家分店的「肉多多火鍋」。台中火鍋店的選擇有不少家，所以其實我已經一陣子沒去吃肉多多火鍋了啦。這次多虧了住在廣三SOGO附近的朋友約我去肉多多火鍋店慶生，我才發現肉多多火鍋進步不少，跟以前很不一樣了耶！肉品、湯頭都做了改版大升級，難怪最近幾年肉多多火鍋在網路上的評價相當高。
+                    織田信長串燒、酒場-西屯本舖│台中深夜美食推薦！日式居酒屋，串燒好吃，品項超多，宵夜最佳首選～<br>
+                    台中深夜美食推薦！這間位在北區的織田信長串燒、酒場是糖糖近期很愛的一間居酒屋，有著濃濃的日式裝潢，不僅用料實在，餐點品項也非常多樣化，光是串燒的種類就有好幾種，目前在台中共有兩間分店，一間在北區西屯路，另一間在西區東興路，營業至凌晨一點，宵夜最佳首選～
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="d-flex justify-content-center mt-4 m-0">
+          <!-- <div class="d-flex justify-content-center mt-4 m-0">
             <div class="row d-flex justify-content-center m-2 p-0 foodNotes-bg">
               <img src="../images/bbq/wuma.jpg" alt="" class="col-5 m-4" />
               <div class="col-7 d-flex align-items-center">
@@ -230,7 +225,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
