--- a/Swallab/login/order.html
+++ b/Swallab/login/order.html
@@ -305,6 +305,10 @@
             
         });
         //時間選單
+
+        let date = document.getElementById('dateDropdown').innerText
+        console.log(date);
+        
     </script>
 </body>
 </html>
