--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/backstage.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/loading.css">
     <script scr="../js/nav.js"></script>
     <title>Management Menu</title>
 </head>
@@ -68,7 +69,26 @@
                     <div class="col-2">名稱</div>
                     <div class="col-2">價錢</div>
                     <div class="col-2">編輯</div>
-                    <div id="menuList"></div>
+                    <div id="menuList">
+                        <div id="myLoading">
+                            <div class="loadingio-spinner-spinner-2by998twmg8">
+                                <div class="ldio-yzaezf3dcmj">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
 
