--- a/Swallab/backstage/ready_to_serve.html
+++ b/Swallab/backstage/ready_to_serve.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
     <link rel="stylesheet" href="../css/backstage.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/loading.css">
     <script scr="../js/nav.js"></script>
     <title>Prepare</title>
 </head>
+
 <body>
     <!-- NAV_begin : sticky-top -->
     <nav class="navbar navbar-expand sticky-top shadow">
@@ -18,7 +21,7 @@
             <a class="navbar-brand ms-5 col-1" href="../headpage/headpage.html">
                 <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
-            
+
             <div class="ms-3 me-5 col-1">
                 <a href="#" class="">
                     <button class="btn btn-sm btnLogin text-nowrap">登出</button>
@@ -37,7 +40,7 @@
                 <a href="./set_time.html">
                     <p>編輯營業時間</p>
                 </a>
-                <a href="./management_menu.html">
+                <a href="./management_menu1.html">
                     <p>菜單管理</p>
                 </a>
                 <a href="./set_info.html">
@@ -49,44 +52,39 @@
                     <a href="./new_oder.html">
                         <h3>新訂單</h3>
                     </a>
-                    <a href="./set_time.html" class="active">
+                    <a href="./ready_to_serve.html" class="active">
                         <h3>準備出餐</h3>
                     </a>
                 </div>
                 <div class="orderStatus">
                     <h4>
                         新訂單 :
-                        <span>1</span>
+                        <span id="status1"></span>
                     </h4>
                     <h4>
                         準備出餐 :
-                        <span>2</span>
+                        <span id="status2"></span>
                     </h4>
                     <p id="stopOrder">暫停接單</p>
                     <p id="recoverOrder" class="d-none">恢復接單</p>
                 </div>
                 <!-- 動態生成 -->
-                <div class="optionContainer">
-                    <div class="item d-flex justify-content-between">
-                        <h4>下訂單的使用者名稱</h4>
-                        <p>電話 : 0912345678</p>
-                        <p>下單時間 : 11:00</p>
-                        <h4>取餐時間 : 12:30</h4>
-                    </div>
-                    <div class="itemContainer row">
-                        <div class="col-9 row">
-                            <div class="col-6">品項</div>
-                            <div class="col-6">數量</div>
-                            <div class="col-6">個人即享鍋</div>
-                            <div class="col-6">1</div>
-                            <div class="col-6">青花驕麻辣燙</div>
-                            <div class="col-6">2</div>
-                            <div class="col-6">白飯</div>
-                            <div class="col-6">2</div>
-                        </div>
-                        <div class="col">
-                            <div class="myButton">
-                                <p>備餐完成</p>
+                <div id="myOrders2">
+                    <div id="myLoading">
+                        <div class="loadingio-spinner-spinner-2by998twmg8">
+                            <div class="ldio-yzaezf3dcmj">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
                             </div>
                         </div>
                     </div>
@@ -96,7 +94,8 @@
         </div>
     </div>
     <script src="../js/jquery-3.7.1.js"></script>
-    <script src="../js/backstage.js"></script>
+    <!-- <script src="../js/ready_to_serve.js"></script> -->
     <script src="../js/backstageOder.js"></script>
 </body>
+
 </html>
