--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/loading.css">
+    <link rel="stylesheet" href="../css/loading_sm.css">
     <script scr="../js/nav.js"></script>
     <title>Management Menu</title>
 </head>
@@ -140,7 +141,9 @@
                             </div>
                         </div>
                         <div class="discountBtn">
-                            <span id="submitResult"></span>
+                            <span id="submitResult">
+                                
+                            </span>
                             <input type="submit" value="存檔" id="addMenuBtn">
                         </div>
                     </form>
@@ -178,7 +181,9 @@
                             </div>
                         </div>
                         <div class="discountBtn">
-                            <span id="mySubmitResult"></span>
+                            <span id="mySubmitResult">
+                                
+                            </span>
                             <input type="submit" value="存檔" id="modifyMenuBtn">
                         </div>
                     </form>
@@ -200,7 +205,27 @@
                     </form>
 
                 </div>
-
+                <!-- loading -->
+                <div id="mySmallLoading" class="d-none">
+                    <div class="loadingCon">
+                        <div class="sm-loadingio-spinner-spinner-2by998twmg8">
+                            <div class="sm-ldio-yzaezf3dcmj">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
