顯示發表食記後的成果

--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -181,9 +181,7 @@
                             </div>
                         </div>
                         <div class="discountBtn">
-                            <span id="mySubmitResult">
-                                
-                            </span>
+                            <span id="mySubmitResult"></span>
                             <input type="submit" value="存檔" id="modifyMenuBtn">
                         </div>
                     </form>
