--- a/Swallab/backstage/management_menu1.html
+++ b/Swallab/backstage/management_menu1.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/loading_sm.css">
     <script scr="../js/nav.js"></script>
     <title>Management Menu</title>
 </head>
@@ -101,6 +102,26 @@
                         <input type="submit" value="存檔" id="discountBtn">
                     </div>
                 </form>
+                <div id="mySmallLoading" class="d-none">
+                    <div class="loadingCon">
+                        <div class="sm-loadingio-spinner-spinner-2by998twmg8">
+                            <div class="sm-ldio-yzaezf3dcmj">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
