--- a/Swallab/backstage/set_info.html
+++ b/Swallab/backstage/set_info.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/backstage.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/loading_sm.css">
     <script scr="../js/nav.js"></script>
     <script src="../js/jquery-3.7.1.js"></script>
     <title>Set Information</title>
@@ -82,12 +83,39 @@
                         </label>
                         <select name="restaurantClassification" id="restaurantClassification">
                             <option>餐廳分類</option>
-                        </select>
+                        </select><br>
+                        <label>
+                            <h5>
+                                餐廳目的 :
+                            </h5>
+                        </label>
+                        <span class="tagsContainer"></span>
+                        
                         <div class="submit-container">
                             <span id="submitResult"></span>
                             <input type="submit" value="存檔">
                         </div>
                     </form>
+                </div>
+                <div id="mySmallLoading" class="d-none">
+                    <div class="loadingCon">
+                        <div class="sm-loadingio-spinner-spinner-2by998twmg8">
+                            <div class="sm-ldio-yzaezf3dcmj">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
