--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand sticky-top shadow">
         <div class="container">
             <!-- LOGO -->
-            <a class="navbar-brand ms-5 col-1" href="../headpage/headpage.html">
+            <a class="navbar-brand ms-5 col-1" href="http://localhost/swallabLa/swallab/public/headpage/headpage">
                 <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
@@ -361,21 +361,21 @@
         <div class="row justify-content-center mt-3 container">
             <!-- 左邊logo -->
             <div class="col-4 text-center"></div>
-            <div class="col-2 justify-content-center">
-                <img src="../images/root/logo.jpg" class="logo" alt="">
-                <div class="text-center">
-                    <span class="rights text-nowrap">© 版權聲明</span>
-                </div>
+            <div class="col-2 d-flex flex-column align-items-center">
+                <img src="../images/root/logo.jpg" class="logo mb-4" alt="">
+                <div class="rights text-nowrap">© 版權聲明</div>
             </div>
+
+
             <!-- 右邊三列 -->
             <div class="col-2">
                 <div class="">
-                    <a class="btn btnFooter text-nowrap">找餐廳</a>
+                    <a class="btn btnFooter text-nowrap mb-2">找餐廳</a>
                 </div>
                 <div class="">
-                    <a class="btn btnFooter text-nowrap">看食記</a>
+                    <a class="btn btnFooter text-nowrap mb-2">看食記</a>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center mt-2 mb-3">
                     <!-- 二個 icon -->
                     <a href="#" class="col-6 text-center">
                         <i class="fa-brands fa-facebook"></i>  <!-- facebook -->
