--- a/Swallab/foodNotes/author.html
+++ b/Swallab/foodNotes/author.html
@@ -245,38 +245,36 @@
     <img src="../images/other/top.png" alt="" class="top" id="top" />
 
     <footer class="myFooter mt-3">
-      <!-- 左右二欄 -->
-      <div class="row justify-content-center mt-3 container">
-        <!-- 左邊logo -->
-        <div class="col-4 text-center"></div>
-        <div class="col-2 justify-content-center">
-          <img src="../images/root/logo.jpg" class="logo" alt="" />
-          <div class="text-center">
-            <span class="rights text-nowrap">© 版權聲明</span>
-          </div>
+        <!-- 左右二欄 -->
+        <div class="row justify-content-center mt-3 container">
+            <!-- 左邊logo -->
+            <div class="col-4 text-center"></div>
+            <div class="col-2 d-flex flex-column align-items-center">
+                <img src="../images/root/logo.jpg" class="logo mb-4" alt="">
+                <div class="rights text-nowrap">© 版權聲明</div>
+            </div>
+
+
+            <!-- 右邊三列 -->
+            <div class="col-2">
+                <div class="">
+                    <a class="btn btnFooter text-nowrap mb-2">找餐廳</a>
+                </div>
+                <div class="">
+                    <a class="btn btnFooter text-nowrap mb-2">看食記</a>
+                </div>
+                <div class="row justify-content-center mt-2 mb-3">
+                    <!-- 二個 icon -->
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-facebook"></i>  <!-- facebook -->
+                    </a>
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-instagram"></i> <!-- instagram -->
+                    </a>
+                </div>
+            </div>
+            <div class="col-4 text-center"></div>
         </div>
-        <!-- 右邊三列 -->
-        <div class="col-2">
-          <div class="">
-            <a class="btn btnFooter text-nowrap">找餐廳</a>
-          </div>
-          <div class="">
-            <a class="btn btnFooter text-nowrap">看食記</a>
-          </div>
-          <div class="row justify-content-center">
-            <!-- 二個 icon -->
-            <a href="#" class="col-6 text-center">
-              <i class="fa-brands fa-facebook"></i>
-              <!-- facebook -->
-            </a>
-            <a href="#" class="col-6 text-center">
-              <i class="fa-brands fa-instagram"></i>
-              <!-- instagram -->
-            </a>
-          </div>
-        </div>
-        <div class="col-4 text-center"></div>
-      </div>
     </footer>
 
     <script src="../js/bootstrap.bundle.js"></script>
