--- a/Swallab/backstage/set_info.html
+++ b/Swallab/backstage/set_info.html
@@ -25,7 +25,7 @@
             
             <div class="ms-3 me-5 col-1">
                 <a href="#" class="">
-                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                    <button id="logout" class="rounded-3 btn btn-sm btnLogin text-nowrap">登出</button>
                 </a>
             </div>
         </div>
@@ -74,7 +74,7 @@
                             <h5>
                                 平均消費 :
                             </h5>
-                            <input type="text" id="restaurantAverage" name="restaurantAverage" placeholder="100 - 200">
+                            <input type="text" id="restaurantAverage" name="restaurantAverage" placeholder="1000 - 2000">
                         </label><br>
                         <label>
                             <h5>
@@ -120,8 +120,8 @@
             </div>
         </div>
     </div>
-    <!-- <script src="../js/backstage.js"></script> -->
-    <script src="../js/set_info.js"></script>
+    <script type="module" src="../js/backstage.js"></script>
+    <script type="module" src="../js/set_info.js"></script>
 </body>
 
 </html>
