--- a/Swallab/backstage/management_menu1.html
+++ b/Swallab/backstage/management_menu1.html
@@ -27,7 +27,7 @@
             
             <div class="ms-3 me-5 col-1">
                 <a href="#" class="">
-                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                    <button id="logout" class="rounded-3 btn btn-sm btnLogin text-nowrap">登出</button>
                 </a>
             </div>
         </div>
@@ -126,8 +126,8 @@
         </div>
     </div>
     <script src="../js/jquery-3.7.1.js"></script>
-    <!-- <script src="../js/backstage.js"></script> -->
-    <script src="../js/management1.js"></script>
+    <script type="module" src="../js/backstage.js"></script>
+    <script type="module" src="../js/management1.js"></script>
 </body>
 
 </html>
