--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -28,7 +28,7 @@
             
             <div class="ms-3 me-5 col-1">
                 <a href="#" class="">
-                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                    <button id="logout" class="rounded-3 btn btn-sm btnLogin text-nowrap">登出</button>
                 </a>
             </div>
         </div>
@@ -114,13 +114,13 @@
                                 
                                 <div class="col-12">
                                     <h5>
-                                        <label for="foodName">名&emsp;&emsp;稱 : &emsp;&emsp;</label>
+                                        <label onclick="add()" for="foodName">名&emsp;&emsp;稱 : &emsp;&emsp;</label>
                                     </h5>
                                     <input name="foodName" id="foodName">
                                 </div>
                                 <div class="col-12">
                                     <h5>
-                                        <label for="foodPrice">價&emsp;&emsp;格 : &emsp;&emsp;</label>
+                                        <label onclick="add2()" for="foodPrice">價&emsp;&emsp;格 : &emsp;&emsp;</label>
                                     </h5>
                                     <input type="number" name="foodPrice" id="foodPrice">
                                 </div>
@@ -229,8 +229,17 @@
         </div>
     </div>
     <script src="../js/jquery-3.7.1.js"></script>
-    <!-- <script src="../js/backstage.js"></script> -->
-    <script src="../js/management2.js"></script>
+    <script type="module" src="../js/backstage.js"></script>
+    <script type="module" src="../js/management2.js"></script>
+    <script>
+        let add = () => {
+            document.getElementById('foodName').value = '玉米筍'
+        }
+
+        let add2 = () => {
+            foodPrice.value = '150'
+        }
+    </script>
 </body>
 
 </html>
