--- a/Swallab/backstage/new_oder.html
+++ b/Swallab/backstage/new_oder.html
@@ -22,7 +22,7 @@
             
             <div class="ms-3 me-5 col-1">
                 <a href="#" class="">
-                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                    <button id="logout" class="rounded-3 btn btn-sm btnLogin text-nowrap">登出</button>
                 </a>
             </div>
         </div>
@@ -91,6 +91,7 @@
     </div>
 
     <script src="../js/jquery-3.7.1.js"></script>
-    <script src="../js/backstageOder.js"></script>
+    <script type="module" src="../js/backstage.js"></script>
+    <script type="module" src="../js/new_order.js"></script>
 </body>
 </html>
