--- a/Swallab/backstage/ready_to_serve.html
+++ b/Swallab/backstage/ready_to_serve.html
@@ -24,7 +24,7 @@
 
             <div class="ms-3 me-5 col-1">
                 <a href="#" class="">
-                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                    <button id="logout" class="rounded-3 btn btn-sm btnLogin text-nowrap">登出</button>
                 </a>
             </div>
         </div>
@@ -94,8 +94,8 @@
         </div>
     </div>
     <script src="../js/jquery-3.7.1.js"></script>
-    <!-- <script src="../js/ready_to_serve.js"></script> -->
-    <script src="../js/backstageOder.js"></script>
+    <script type="module" src="../js/backstage.js"></script>
+    <script type="module" src="../js/new_order.js"></script>
 </body>
 
 </html>
