--- a/Swallab/backstage/set_time.html
+++ b/Swallab/backstage/set_time.html
@@ -23,7 +23,7 @@
 
             <div class="ms-3 me-5 col-1">
                 <a href="#" class="">
-                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                    <button id="logout" class="rounded-3 btn btn-sm btnLogin text-nowrap">登出</button>
                 </a>
             </div>
         </div>
@@ -178,8 +178,9 @@
         </div>
     </div>
     <script src="../js/jquery-3.7.1.js"></script>
-    <!-- <script src="../js/backstage.js"></script> -->
-    <script src="../js/setTime.js"></script>
+    <script type="module" src="../js/backstage.js"></script>
+    <script type="module" src="../js/setTime.js"></script>
+    <!-- <script src="../js/setTime.js"></script> -->
 </body>
 
 </html>
