fix nonestop loop

--- a/Swallab_0812/public/Swallab/myHistory/myHistory_noReact.html
+++ b/Swallab_0812/public/Swallab/myHistory/myHistory_noReact.html
@@ -176,15 +176,15 @@
                     <!-- 4 btn of jr.nav in history_begin -->
                     <div class="main-content row ms-5">
                         <div class="main-content row ms-5 tab-buttons">
-                            <button class="col-2 tab-button active btn btn-outline-success"
+                            <button type="button" class="col-2 tab-button active btn btn-outline-success"
                                 data-tab="all"><a><span>全部記錄</span></a></button>
-                            <button class="col-2 tab-button btn btn-outline-success"
+                            <button type="button" class="col-2 tab-button btn btn-outline-success"
                                 data-tab="orders"><a><span>歷史訂單</span></a></button>
-                            <button class="col-2 tab-button btn btn-outline-success"
+                            <button type="button" class="col-2 tab-button btn btn-outline-success"
                                 data-tab="notes"><a><span>歷史食記</span></a></button>
-                            <button class="col-2 tab-button btn btn-outline-success"
+                            <button type="button" class="col-2 tab-button btn btn-outline-success"
                                 data-tab="comments"><a><span>我的評論</span></a></button>
-                            <button class="col-2 tab-button btn btn-outline-success"
+                            <button type="button" class="col-2 tab-button btn btn-outline-success"
                                 data-tab="favorites"><a><span>我的收藏</span></a></button>
                         </div>
                         <hr class="mt-3">
@@ -192,6 +192,7 @@
                         <!-- 組件生成 -->
                         <div id="activity-list" class="activity-list row mt-5 myRecordsTemp align-self-center"></div>
                         <!-- 組件生成 -->
+                        <div id="all-tab-content" class="tab-content"></div>
                         <button id="load-more" class="load-more-button btn btn-outline-success w-25">觀看更多</button>
                     </div>
                 </div>
