修改接單狀況

--- a/Swallab/backstage/new_oder.html
+++ b/Swallab/backstage/new_oder.html
@@ -63,8 +63,7 @@
                         準備出餐 : 
                         <span id="status2"></span>
                     </h4>
-                    <p id="stopOrder">暫停接單</p>
-                    <p id="recoverOrder" class="d-none">恢復接單</p>
+                    <p id="orderStatus">暫停接單</p>
                 </div>
                 <div id="myOrders1">
                     <div id="myLoading">
