--- a/Swallab/backstage/ready_to_serve.html
+++ b/Swallab/backstage/ready_to_serve.html
@@ -65,8 +65,7 @@
                         準備出餐 :
                         <span id="status2"></span>
                     </h4>
-                    <p id="stopOrder">暫停接單</p>
-                    <p id="recoverOrder" class="d-none">恢復接單</p>
+                    <p id="orderStatus">暫停接單</p>
                 </div>
                 <!-- 動態生成 -->
                 <div id="myOrders2">
