--- a/Swallab/login/writeBlogPost.html
+++ b/Swallab/login/writeBlogPost.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link href="../css/footer.css" rel="stylesheet">
     <link href="../css/nav.css" rel="stylesheet">
@@ -153,7 +156,7 @@
                 </a>
             </div>
             <div class="col">
-                <h3>撰寫食記</h3>
+                <h4>撰寫食記</h4>
                 <form id="myBlog">
                     <div class="formCon">
                         <label for="title">標&emsp;&emsp;題 : &emsp;&emsp;</label>
